tests/NormalTests/paczka1/fuzzy1/67930217.err
Error in line 4: wDOvvS A669 78,7
Error in line 6: soM6 A358 57,8
Error in line 9: soM6 A669 48,3
Error in line 10: soM6 A48 57,1
Error in line 8: wDOvvS A358 93,1
Error in line 19: wDOvvS A669 69,0
Error in line 29: KBqZW7K A744 97,9
